Optimizing projects, increasing performance

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>WXCXW VPN</title>
 
     <!-- ✅ Ускорим загрузку аватарки -->
-    <link rel="preload" as="image" href="/assets/images/avatar.png" type="image/png" />
+    <link rel="preload" as="image" href="/assets/images/avatar.webp" type="image/webp" />
 
     <!-- ✅ Telegram Web App SDK без блокировки -->
     <script async src="https://telegram.org/js/telegram-web-app.js"></script>
