--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="MB Clicker — кликер для Telegram, собирай мегабайты и обменивай!" />
     <title>WXCXW VPN</title>
 
     <!-- ✅ Ускорим загрузку аватарки -->
