Optimizng project, increasing perfomance

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="description" content="MB Clicker — кликер для Telegram, собирай мегабайты и обменивай!" />
     <title>WXCXW VPN</title>
 
-    <!-- ✅ Ускорим загрузку аватарки -->
-    <link rel="preload" as="image" href="/assets/images/avatar.webp" type="image/webp" />
+    <link rel="preload" href="/assets/vendor-*.js" as="script">
+    <link rel="preload" href="/assets/index-*.css" as="style">
+    <link rel="preload" href="/assets/avatar-*.webp" as="image">
 
     <!-- ✅ Telegram Web App SDK без блокировки -->
     <script async src="https://telegram.org/js/telegram-web-app.js"></script>
