--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="MB Clicker — кликер для Telegram, собирай мегабайты и обменивай!" />
+    <meta name="theme-color" content="#000000" />
     <title>WXCXW VPN</title>
 
     <link rel="preload" href="/assets/vendor-*.js" as="script">
